--- a/templates/showdb.html
+++ b/templates/showdb.html
@@ -1,29 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<script type="text/javascript" src="/static/js/showdbscripts.js">
 
-</script>
 <script type="text/javascript">
-// All jinja variables needs to be passed in this file, and cannot be in the scripts.js file
-$(function() {
-  // fill comment if exists:
-  $('#comment').val('{{ patient_comment[0] | replace("\r\n", "\\n") }}');
-  $('#filtus_settings').html(' {{ patient_comment[1] | replace("\r\n", "\\n")    }}' );
-  //fill the patient info modal with info on the specific patient in case you want to alter some values.
-  $('#pID_Modal').on('shown.bs.modal', function (e) {
-    $('#sex').val('{{ pID_patient.sex }}');
-    $('#panel').val('{{ pID_patient.panel_name }}');
-    $('#clinInfo').val('{{ pID_patient.clinInfo }}');
-    $('#familyID').val('{{ pID_patient.familyID }}');
-    $('#hsmFileUpload').val('{{ pID_patient.hsmFileUpload }}');
-    $('#fragmentSizeUpload').val('{{ pID_patient.fragmentSizeUpload }}');
-  });
-//var pID = $('dt:contains("patient ID").child().val()');
-//console.log('tjoagutta');
-});
+{% include 'showdb.js' %}
 </script>
-
 
 
 <div class="container">
