--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="/static/js/bootstrap.min.js"></script>
 <script src="/static/js/jquery.autosize.min.js"></script>
+<script src="/static/js/jquery-ui.min.js"></script>
 <script type="text/javascript">
   var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 </script>
@@ -13,6 +14,7 @@
   <meta charset="UTF-8">
   <title></title>
   <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+  
   <style>
     body {
       padding-top: 65px;
