Added info on the insertsizemtrics-uppload, and made the SBS show up in the interp-screen

--- a/templates/showdb.html
+++ b/templates/showdb.html
@@ -25,7 +25,7 @@
     <dt>Sex</dt>
     <dd>{{ pID_patient.sex }}</dd>
     <dt>SBS</dt>
-    <dd>Kommer!</dd>
+    <dd>{{ pID_patient.sbs }}</dd>
     <dt>Clinical info</dt>
     <dd>{{ pID_patient.clinInfo }}</dd>
   </dl>
