--- a/templates/testinput.html
+++ b/templates/testinput.html
@@ -49,7 +49,7 @@
             <fieldset class="form-group">
                 {{ form.fragmentSizeUpload.label }}
                 {{ form.fragmentSizeUpload(class="Load fragment size file") }}
-                <small class="text-muted">Load a file containing fragment sizes for the sample.</small>
+                <small class="text-muted">Load a file containing fragment sizes for the sample (insertSizeMetrics.txt).</small>
             </fieldset>
             </div>
     </div>
