Added SBS to the report

--- a/templates/report.html
+++ b/templates/report.html
@@ -26,6 +26,8 @@
     <dd>{{ pID_patient.panel_name }}</dd>
     <dt>Sex</dt>
     <dd>{{ pID_patient.sex }}</dd>
+    <dt>SBS</dt>
+    <dd>{{ pID_patient.sbs }}</dd>
     <dt>Clinical info</dt>
     <dd>{{ pID_patient.clinInfo }}</dd>
   </dl>
