--- a/templates/report.html
+++ b/templates/report.html
@@ -54,6 +54,13 @@
   </tbody>
 </table>
 </div>
+
+<div class="col-sm-1 col-sm-offset-10">
+  <a href="{{ url_for('showdb') }}/{{ pID }}">
+  <button type="button" class="btn btn-primary">Back to interpretation</button>
+  </a>
+</div>
+
 </div>
 <div class="row">
 <div class="col-sm-4">
@@ -77,6 +84,10 @@
 
 {% for item in var_items|sort(attribute='inclass')|reverse %}
 <div class="row">
+  
+  <div class="panel panel-primary">
+    <div class="panel-heading">{{ item.transcript }}:c.{{ item.cDNA }} {{ item.protein }}</div>
+    <div class="panel-body">
   <div class="col-md-6">
     <dl class="dl-horizontal">
       <dt>Position:</dt>
@@ -207,8 +218,10 @@
 <dd>{{ item.comments }}</dd>
 </div>
 </div>
+</div>
+</div>
 
-<hr>
+
 {% endfor %}
 <div class="jumbotron container-fluid">
 <p>Signature:</p>
