--- a/templates/showdb.html
+++ b/templates/showdb.html
@@ -1,5 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
+{% with messages = get_flashed_messages() %}
+{% if messages %}
+{% for message in messages %}
+<div class="row">
+  <div class="alert alert-info" role="alert">{{ message }}</div>
+</div>
+{% endfor %}
+{% endif %}
+{% endwith %}
+
+
 
 <script type="text/javascript">
 {% include 'showdb.js' %}
